Bug 703833 - Avoid invalid conversion from 'const size_t*' to 'const jsuword*' on s390